<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">

    <string name="gesture_lock_alert">密码提示</string>

    <string name="permission_to_request">去开启</string>
    <string name="permission_has_request">已开启</string>

    <string name="path_manager_alert">点击下面文件类型，其路径会展示在此处</string>

    <string name="shot_screen_alert_image">点击右侧按钮，保存上面 ImageView</string>
    <string name="shot_screen_click_image">ShotImageView</string>
    <string name="shot_screen_alert_scroll">点击右侧按钮，保存上面 ScrollView</string>
    <string name="shot_screen_click_scroll">ShotScrollView</string>

    <string name="wallpaper_lock">设置锁屏</string>
    <string name="wallpaper_wall">设置壁纸</string>

    <string name="shortcut_alert_shortcut">点击Logo，添加桌面快捷方式</string>
    <string name="shortcut_alert_dynamic">点击Logo，添加动态快捷方式，长按桌面图标弹出</string>
    <string name="shortcut_target_info">快捷方式打开页</string>

    <string name="float_drag_alert">拖动切图控件，自动停靠在距离更近的侧边</string>

    <string name="app_widget_small_preview_alert">点击上面组件预览图，添加 2*2 桌面组件</string>
    <string name="app_widget_big_preview_alert">点击上面组件预览图，添加 2*4 桌面组件</string>
    <string name="app_widget_refresh_alert">点击右侧按钮，刷新组件数据</string>
    <string name="app_widget_refresh">Refresh</string>

    <string name="kotlin_test_alert">点击右侧按钮，运行上面 Kotlin 代码</string>
    <string name="kotlin_test_run">Run</string>

    <string name="dialog_text_title">标题</string>
    <string name="dialog_text_msg">提示信息</string>
    <string name="dialog_text_cancel">取消</string>
    <string name="dialog_text_confirm">确认</string>

    <string name="algorithm_sort_input_hint">输入待排序的一串数字，数字之间用空格分开</string>
    <string name="algorithm_sort_btn">Sort</string>
    <string name="algorithm_sort_result">Result…</string>
    <string name="algorithm_sort_clear">Clear</string>

    <string name="algorithm_traversal_btn">Traversal</string>

    <string name="algorithm_link_re_change">ReChange</string>

    <string name="function_app_layout_to_top">一键吸顶</string>

    <string name="system_jar_test_show_toast">ShowToast</string>
    <string name="system_jar_test_load_jar">LoadJar</string>
    <string name="system_jar_test_load_jar_dex">LoadJarDex</string>
    <string name="system_jar_test_load_jar_kotlin">LoadJarKotlin</string>

</resources>