<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/padding_14"
    android:background="@color/color_white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_14"
        android:layout_marginTop="@dimen/padding_14"
        android:text="@string/dialog_text_title"
        android:textColor="@color/ct_1"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_12"
        android:text="@string/dialog_text_msg"
        android:textColor="@color/ct_1"
        android:textSize="@dimen/text_15"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_12"
        android:text="@string/dialog_text_cancel"
        android:textColor="@color/ct_3"
        android:textSize="@dimen/text_15"
        app:layout_constraintStart_toStartOf="@id/msg"
        app:layout_constraintTop_toBottomOf="@id/msg" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_confirm"
        android:layout_marginStart="@dimen/padding_14"
        android:textColor="@color/color_alert"
        android:textSize="@dimen/text_15"
        app:layout_constraintStart_toEndOf="@id/cancel"
        app:layout_constraintTop_toTopOf="@id/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>